# nexus

./: .gitignore  Cargo.toml  MIGRATION_GOLDENS.md  README.md  flake.nix  publish.sh
.cargo/: config.toml
.github/workflows/: ci.yaml  download_slang.sh  python-release.yaml
.run/: all_examples2 (web).run.xml  all_examples2.run.xml  all_examples3 (web).run.xml  all_examples3.run.xml  mpm_testbed2.run.xml  mpm_testbed3.run.xml
build_cuda/: README.md  SETUP.md  build_cubin_unroll.sh  build_libnvvm_unroll_both.sh  build_nexus_cubin.sh  build_nexus_cubin_libnvvm.sh  build_vortx_cubin_llc.sh  build_vortx_cubin_only.sh  detect_env.sh
crates/examples2d/: Cargo.toml  all_examples2.rs  balls2.rs  boxes2.rs  boxes_and_balls2.rs  centilever_beam2.rs  compound2.rs  dynamic_rbd2.rs  elastic_cut2.rs  elasticity2.rs  joint_ball2.rs  joint_fixed2.rs  joint_prismatic2.rs  polyline2.rs  primitives2.rs  pyramid2.rs  sand2.rs
crates/examples3d/: Cargo.toml  all_examples3.rs  balls3.rs  bench_batch_sweep3.rs  bench_joints3.rs  bench_multibody_pendulum3.rs  bench_pyramid3.rs  bench_urdf3.rs  boxes3.rs  boxes_and_balls3.rs  centilever_beam3.rs  compound3.rs  dynamic_rbd3.rs  elastic_cut3.rs  fem_cube3.rs  heightfield3.rs  joint_ball3.rs  joint_fixed3.rs  joint_prismatic3.rs  joint_revolute3.rs  joint_revolute_batch3.rs  joints3.rs  keva3.rs  many_pyramids3.rs  many_pyramids_batch3.rs  mujoco_menagerie3.rs  multibody_pendulum3.rs  primitives3.rs  pyramid3.rs  sand3.rs  test_actuation3.rs  test_env_reset3.rs  test_motor3.rs  test_warmstart3.rs  trimesh3.rs  urdf3.rs
crates/mpm_examples2d/: Cargo.toml  centilever_beam2.rs  elastic_cut2.rs  elasticity2.rs  mpm_testbed2.rs  sand2.rs
crates/mpm_examples3d/: Cargo.toml  centilever_beam3.rs  elastic_cut3.rs  heightfield3.rs  mpm_testbed3.rs  sand3.rs
crates/nexus-mpm-shaders2d/: Cargo.toml
crates/nexus-mpm-shaders3d/: Cargo.toml
crates/nexus-mpm2d/: Cargo.toml  build.rs
crates/nexus-mpm2d/shaders-spirv/: .gitkeep
crates/nexus-mpm3d/: Cargo.toml  build.rs
crates/nexus-shaders2d/: Cargo.toml
crates/nexus-shaders3d/: Cargo.toml
crates/nexus2d/: Cargo.toml  build.rs
crates/nexus3d/: Cargo.toml  build.rs
crates/nexus3d/shaders-spirv/: .gitkeep
crates/nexus_fem2d/: Cargo.toml  build.rs
crates/nexus_fem3d/: Cargo.toml  build.rs
crates/nexus_fem_shaders2d/: Cargo.toml
crates/nexus_fem_shaders3d/: Cargo.toml
crates/nexus_mpm2d/: Cargo.toml  build.rs
crates/nexus_mpm2d/shaders-spirv/: .gitkeep
crates/nexus_mpm3d/: Cargo.toml  build.rs
crates/nexus_mpm3d/shaders-spirv/: .gitkeep
crates/nexus_mpm_shaders2d/: Cargo.toml
crates/nexus_mpm_shaders3d/: Cargo.toml
crates/nexus_mpm_testbed2d/: Cargo.toml
crates/nexus_mpm_testbed3d/: Cargo.toml
crates/nexus_python3d/: Cargo.toml  README.md  pyproject.toml  run_examples.py
crates/nexus_python3d/examples/: balls3.py  boxes3.py  boxes_and_balls3.py  compound3.py  dynamic_rbd3.py  joint_ball3.py  joint_fixed3.py  joint_prismatic3.py  joint_revolute3.py  joint_revolute_batch3.py  joints3.py  keva3.py  many_pyramids3.py  many_pyramids_batch3.py  mujoco_menagerie3.py  multibody_pendulum3.py  primitives3.py  pyramid3.py  test_cuda_capture3.py  test_rl_smoke3.py  trimesh3.py  urdf3.py
crates/nexus_python3d/src/: lib.rs  loaders.rs  math.rs  nexus.rs  rbd.rs  viewer.rs
crates/nexus_rbd2d/: Cargo.toml  build.rs
crates/nexus_rbd3d/: Cargo.toml  build.rs  rustc-ice-2026-07-21T15_52_20-3730602.txt
crates/nexus_rbd_shaders2d/: Cargo.toml
crates/nexus_rbd_shaders3d/: Cargo.toml
crates/nexus_testbed2d/: Cargo.toml
crates/nexus_testbed3d/: Cargo.toml
crates/nexus_viewer2d/: Cargo.toml
crates/nexus_viewer3d/: Cargo.toml
crates/pendulum_headless/: Cargo.toml  render_boxes3d.py
crates/pendulum_headless/src/: main.rs
docs/: RUNNING-ON-MACOS.md
src/: lib.rs  pipeline.rs  state.rs
src/broad_phase/: lbvh.rs  mod.rs  narrow_phase.rs
src/dynamics/: body.rs  coloring.rs  mod.rs  prefix_sum.rs  solver.rs
src/queries/: contact.rs  mod.rs
src/shapes/: shape.rs
src_fem/: lib.rs  mesh.rs  pipeline.rs
src_fem/solver/: kernels.rs  mod.rs
src_fem_shaders/: lib.rs  material.rs  types.rs
src_fem_shaders/kernels/: explicit.rs  implicit.rs  mod.rs
src_mpm/: lib.rs  pipeline.rs  trimesh.rs
src_mpm/grid/: grid.rs  mod.rs  prefix_sum.rs  sort.rs
src_mpm/models/: drucker_prager.rs  mod.rs
src_mpm/sampling/: mod.rs  sample_polyline.rs  sample_trimesh.rs
src_mpm/solver/: boundary_condition.rs  g2p.rs  g2p_cdf.rs  grid_update.rs  grid_update_cdf.rs  mod.rs  p2g.rs  p2g_cdf.rs  params.rs  particle.rs  particle_model.rs  particle_update.rs  prep_readback.rs  rigid_impulses.rs  rigid_integrate.rs  rigid_particle_update.rs  timestep_bound.rs
src_mpm_shaders/: lib.rs
src_mpm_shaders/collision/: collide.rs  collide.slang  mod.rs  trimesh.rs  trimesh.slang
src_mpm_shaders/grid/: grid.rs  grid.slang  kernel.rs  kernel.slang  mod.rs  prefix_sum.rs  prefix_sum.slang  sort.rs  sort.slang
src_mpm_shaders/models/: default.rs  default.slang  drucker_prager.rs  drucker_prager.slang  interfaces.rs  interfaces.slang  linear_elasticity.rs  linear_elasticity.slang  mod.rs  neo_hookean_elasticity.rs  neo_hookean_elasticity.slang  specializations.rs  specializations.slang  utils.rs  utils.slang
src_mpm_shaders/solver/: boundary_condition.rs  boundary_condition.slang  g2p.rs  g2p.slang  g2p_cdf.rs  g2p_cdf.slang  grid_update.rs  grid_update.slang  grid_update_cdf.rs  grid_update_cdf.slang  grid_update_collide.rs  mod.rs  p2g.rs  p2g.slang  p2g_cdf.rs  p2g_cdf.slang  params.rs  params.slang  particle.rs  particle.slang  (+9 more)
src_mpm_testbed/: data.rs  lib.rs  step.rs
src_rbd/: lib.rs  pipeline.rs
src_rbd_shaders/: barrier_div_test.rs  lib.rs
src_shaders/: lib.rs
src_testbed/: graphics.rs  lib.rs  ui.rs
src_viewer/: backend.rs  graphics.rs  lib.rs  ui.rs  viewer.rs
tools/: build_nexus_cubin.sh  build_nexus_cubin_libnvvm.sh  build_unified_cubins.sh  build_unified_cubins_local.sh
website/: .gitignore  .htaccess  README.md  docusaurus.config.ts  package.json  publish.sh
(+183 files in other folders)
