[workspace]
members = [
    "crates/nexus2d",
    "crates/nexus3d",
    "crates/nexus_testbed2d",
    "crates/nexus_testbed3d",
    "crates/examples2d",
    "crates/examples3d",
    "crates/nexus_rbd2d",
    "crates/nexus_rbd3d",
    "crates/nexus_rbd_shaders2d",
    "crates/nexus_rbd_shaders3d",
    "crates/nexus_mpm_shaders2d",
    "crates/nexus_mpm_shaders3d",
    "crates/nexus_mpm2d",
    "crates/nexus_mpm3d",
    "crates/nexus_fem_shaders2d",
    "crates/nexus_fem_shaders3d",
    "crates/nexus_fem2d",
    "crates/nexus_fem3d",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dimforge/nexus"

[workspace.dependencies]
glamx = { version = "0.2", default-features = false, features = ["nostd-libm", "bytemuck"] }
include_dir = "0.7"
khal-std = "0.1"
khal = { version = "0.1", features = ["derive"]}
vortx = "0.1"
bytemuck = { version = "1", features = ["derive"] }
web-time = "1"
static_assertions = "1"

# Shaders deps
khal-builder = "0.1.1"
vortx-shaders = { version = "0.1", default-features = false }
unroll = "0.1"
crunchy = "0.2.4"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3", "from_rapier", "cpu", "cuda", "metal"))',
    'cfg(target_arch_is_gpu)',
] }

[patch.crates-io]
khal = { path = "../khal/crates/khal" }
khal-derive = { path = "../khal/crates/khal-derive" }
khal-std = { path = "../khal/crates/khal-std" }
khal-builder = { path = "../khal/crates/khal-builder" }
vortx = { path = "../vortx" }
vortx-shaders = { path = "../vortx/vortx-shaders" }

#glamx = { git = "https://github.com/dimforge/glamx", branch = "bytemuck"}
#parry2d = { git = "https://github.com/dimforge/parry", branch = "spirv-compat"}
#parry3d = { git = "https://github.com/dimforge/parry", branch = "spirv-compat"}
#khal = { path = "../khal/crates/khal" }
#khal-derive = { path = "../khal/crates/khal-derive" }
#khal-std = { path = "../khal/crates/khal-std" }
#vortx = { path = "../vortx" }
#vortx-shaders = { path = "../vortx/vortx-shaders" }

#glamx = { path = "../glamx" }
kiss3d = { path = "../kiss3d" }
parry2d = { path = "../parry/crates/parry2d" }
parry3d = { path = "../parry/crates/parry3d" }
rapier2d = { path = "../rapier/crates/rapier2d" }
rapier3d = { path = "../rapier/crates/rapier3d" }
rapier3d-urdf = { path = "../rapier/crates/rapier3d-urdf" }
rapier3d-meshloader = { path = "../rapier/crates/rapier3d-meshloader" }
#vortx = { path = "../vortx" }
