[workspace]
members = [
    "crates/nexus2d",
    "crates/nexus3d",
    "crates/nexus_viewer2d",
    "crates/nexus_viewer3d",
    "crates/examples2d",
    "crates/examples3d",
    "crates/nexus_rbd2d",
    "crates/nexus_rbd3d",
    "crates/nexus_rbd_shaders2d",
    "crates/nexus_rbd_shaders3d",
    "crates/nexus_python3d",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dimforge/nexus"
readme = "README.md"
exclude = ["**/.DS_Store"]

[workspace.dependencies]
glamx = { version = "0.3", default-features = false, features = ["nostd-libm", "bytemuck"] }
include_dir = "0.7"
khal-std = { version = "0.2", default-features = false }
khal = { version = "0.2", features = ["derive"]}
vortx = { version = "0.3", features = ["unsafe_remove_boundchecks"] }
bytemuck = { version = "1", features = ["derive"] }
web-time = "1"
static_assertions = "1"
futures = "0.3"
bitflags = "2"
bvh = "0.7"

# Physics / geometry. default-features off for the no_std shader crates; host
# crates opt back in with `features = ["default"]`.
rapier2d = { version = "0.34", default-features = false }
rapier3d = { version = "0.34", default-features = false }
rapier3d-urdf = "0.34"
rapier3d-mjcf = { version = "0.34", features = ["stl", "wavefront", "msh"] }
parry2d = { version = "0.29", default-features = false }
parry3d = { version = "0.29", default-features = false }

# Viewer / examples deps
kiss3d = "0.45.1"
Inflector = "0.11"
oorandom = "11"
anyhow = "1"
pollster = "0.4"
getrandom = { version = "0.2", features = ["js"] }

# Dev deps
futures-test = "0.3"
serial_test = "3"
approx = "0.5"
rand = "0.9"

# Shaders deps
khal-builder = "0.2"
vortx-shaders = { version = "0.3", default-features = false }
unroll = "0.1"
crunchy = "0.2.4"

# Shader crates
nexus_rbd_shaders2d = { version = "0.4.0", path = "crates/nexus_rbd_shaders2d" }
nexus_rbd_shaders3d = { version = "0.4.0", path = "crates/nexus_rbd_shaders3d" }

# Internal crates. rbd is pulled with default-features off so dependents can
# pick their own feature set, mirroring the rapier/parry pattern.
nexus2d = { version = "0.4.0", path = "crates/nexus2d" }
nexus3d = { version = "0.4.0", path = "crates/nexus3d" }
nexus_rbd2d = { version = "0.4.0", path = "crates/nexus_rbd2d", default-features = false }
nexus_rbd3d = { version = "0.4.0", path = "crates/nexus_rbd3d", default-features = false }
nexus_viewer2d = { version = "0.4.0", path = "crates/nexus_viewer2d" }
nexus_viewer3d = { version = "0.4.0", path = "crates/nexus_viewer3d" }

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3", "cpu", "cuda", "metal"))',
    'cfg(target_arch_is_gpu)',
] }

[patch.crates-io]
## Local glam clone with SPIR-V vector-arithmetic intrinsics (Vec3 add/sub/mul/scale).
#glam = { path = "../glam-rs" }
# 30% faster for loop in P2G
#naga = { git = "https://github.com/sebcrozet/wgpu", branch = "for-loop-opt" }
#khal = { git = "https://github.com/dimforge/khal", branch = "nonblock-readback" }
#khal-derive = { git = "https://github.com/dimforge/khal", branch = "nonblock-readback" }
#khal-std = { git = "https://github.com/dimforge/khal", branch = "nonblock-readback" }
#khal-builder = { git = "https://github.com/dimforge/khal", branch = "nonblock-readback" }
#kiss3d = { git = "https://github.com/dimforge/kiss3d", branch = "render-2d" }
#rapier3d = { git = "https://github.com/dimforge/rapier", branch = "multibody-fixes" }
#rapier3d-mjcf = { git = "https://github.com/dimforge/rapier", branch = "multibody-fixes" }
#rapier3d-urdf = { git = "https://github.com/dimforge/rapier", branch = "multibody-fixes" }
#rapier3d-meshloader = { git = "https://github.com/dimforge/rapier", branch = "multibody-fixes" }
#vortx = { git = "https://github.com/dimforge/vortx", branch = "int-reduce" }
#vortx-shaders = { git = "https://github.com/dimforge/vortx", branch = "int-reduce" }

#glamx = { path = "../glamx" }
#kiss3d = { path = "../kiss3d" }
#parry2d = { path = "../parry/crates/parry2d" }
#parry3d = { path = "../parry/crates/parry3d" }
#rapier2d = { path = "../rapier/crates/rapier2d" }
#rapier3d = { path = "../rapier/crates/rapier3d" }
#rapier3d-mjcf = { path = "../rapier/crates/rapier3d-mjcf" }
#rapier3d-urdf = { path = "../rapier/crates/rapier3d-urdf" }
#rapier3d-meshloader = { path = "../rapier/crates/rapier3d-meshloader" }
khal = { path = "../khal-unified/crates/khal" }
khal-derive = { path = "../khal-unified/crates/khal-derive" }
khal-std = { path = "../khal-unified/crates/khal-std" }
khal-builder = { path = "../khal-unified/crates/khal-builder" }
vortx = { path = "../vortx-unified" }
vortx-shaders = { path = "../vortx-unified/vortx-shaders" }
