[package]
name = "nexus2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 2D GPU-accelerated multiphysics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
path = "../../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", "f32", "webgpu"]
dim2 = []
f32 = []
f64 = []
webgpu = ["nexus_rbd2d?/webgpu", "nexus_mpm2d?/webgpu", "nexus_fem2d?/webgpu"]
from_rapier = ["nexus_rbd2d?/from_rapier", "nexus_mpm2d?/from_rapier"]
cpu = ["nexus_rbd2d?/cpu", "nexus_mpm2d?/cpu", "nexus_fem2d?/cpu"]
cpu-parallel = ["cpu", "nexus_rbd2d?/cpu-parallel", "nexus_mpm2d?/cpu-parallel", "nexus_fem2d?/cpu-parallel"]
cuda = ["nexus_rbd2d?/cuda", "nexus_mpm2d?/cuda", "nexus_fem2d?/cuda"]

rbd = ["dep:nexus_rbd2d"]
mpm = ["dep:nexus_mpm2d"]
fem = ["dep:nexus_fem2d"]

[dependencies]
nexus_rbd2d = { path = "../nexus_rbd2d", optional = true }
nexus_mpm2d = { path = "../nexus_mpm2d", optional = true }
nexus_fem2d = { path = "../nexus_fem2d", optional = true }

