[package]
name = "nexus2d"
authors = { workspace = true }
description = "Cross-platform 2D GPU-accelerated multiphysics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
exclude = { workspace = true }

[lib]
path = "../../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", "f32", "webgpu"]
dim2 = []
f32 = []
f64 = []
webgpu = ["nexus_rbd2d?/webgpu"]
metal = ["nexus_rbd2d?/metal"]
cpu = ["nexus_rbd2d?/cpu"]
cpu-parallel = ["cpu", "nexus_rbd2d?/cpu-parallel"]
cuda = ["nexus_rbd2d?/cuda"]

rbd = ["dep:nexus_rbd2d"]

[dependencies]
khal = { workspace = true }
nexus_rbd2d = { workspace = true, optional = true, features = ["default"] }
bitflags = { workspace = true }
web-time = { workspace = true }

