[package]
name = "nexus3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 3D GPU-accelerated multiphysics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
path = "../../src/lib.rs"
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim3", "f32", "webgpu"]
dim3 = []
f32 = []
f64 = []
webgpu = ["nexus_rbd3d?/webgpu", "nexus_mpm3d?/webgpu", "nexus_fem3d?/webgpu"]
from_rapier = ["nexus_rbd3d?/from_rapier", "nexus_mpm3d?/from_rapier"]
cpu = ["nexus_rbd3d?/cpu", "nexus_mpm3d?/cpu", "nexus_fem3d?/cpu"]
cpu-parallel = ["cpu", "nexus_rbd3d?/cpu-parallel", "nexus_mpm3d?/cpu-parallel", "nexus_fem3d?/cpu-parallel"]

rbd = ["dep:nexus_rbd3d"]
mpm = ["dep:nexus_mpm3d"]
fem = ["dep:nexus_fem3d"]

[dependencies]
nexus_rbd3d = { path = "../nexus_rbd3d", optional = true }
nexus_mpm3d = { path = "../nexus_mpm3d", optional = true }
nexus_fem3d = { path = "../nexus_fem3d", optional = true }

