[package]
name = "nexus_fem2d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Cross-platform 2D GPU-accelerated FEM physics."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
name = "nexus_fem2d"
path = "../../src_fem/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", "f32", "webgpu"]
dim2 = []
f32 = []
f64 = []
webgpu = ["khal/webgpu"]
cpu = ["nexus_fem_shaders2d/cpu", "vortx/cpu"]
cpu-parallel = ["cpu", "vortx/cpu-parallel"]

[dependencies]
nexus_fem_shaders2d = { path = "../nexus_fem_shaders2d" }
glamx = { workspace = true }
include_dir = { workspace = true }
khal = { workspace = true }
vortx = { workspace = true }
bytemuck = { workspace = true }
web-time = { workspace = true }

[build-dependencies]
walkdir = "2"
