[package]
name = "nexus_fem_shaders3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "3D GPU shaders for nexus FEM solver (rust-gpu)."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
path = "../../src_fem_shaders/lib.rs"

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
    'cfg(target_arch, values("spirv", "nvptx64"))',
] }

[features]
default = ["dim3"]
dim3 = []
unsafe_remove_boundchecks = ["vortx-shaders/unsafe_remove_boundchecks"]
cpu = []
cuda = []

[dependencies]
vortx-shaders = { workspace = true }
khal-std = { workspace = true }
glamx = { workspace = true }

# Host-only dependencies (excluded on GPU targets: spirv and nvptx64).
[target.'cfg(not(any(target_arch = "spirv", target_arch = "nvptx64")))'.dependencies]
bytemuck = { workspace = true }
khal = { workspace = true }
