[package]
name = "nexus_mpm_shaders3d"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "3D GPU shaders for nexus physics engine (rust-gpu)."
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
path = "../../src_mpm_shaders/lib.rs"

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
    'cfg(target_arch, values("spirv"))',
] }

[features]
default = ["dim3"]
dim3 = []
unsafe_remove_boundchecks = ["vortx-shaders/unsafe_remove_boundchecks"]
push_constants = []
# Enables some changes in the shaders for compatibility with web platforms.
web-compat = []
cpu = []

[dependencies]
nexus_rbd_shaders3d = { path = "../nexus_rbd_shaders3d", default-features = false, features = ["dim3"] }
vortx-shaders = { workspace = true }
khal-derive = { workspace = true }
spirv-std = { workspace = true }
unroll = { workspace = true }
crunchy = { workspace = true }
glamx = { workspace = true }

parry3d = { version = "0.26", default-features = false, features = ["dim3","f32"] }


[target.'cfg(not(target_arch = "spirv"))'.dependencies]
bytemuck = { workspace = true }
khal = { workspace = true }